# RemoteDict

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test_and_publish.yml
src/remotedict/: __init__.py  expiring_remotedict.py  persistent_remotedict.py  remotedict.py
tests/: run_tests.py  test_expiring_remotedict_server.py  test_persistent_remotedict_server.py  test_remotedict_server.py
