[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyRemoteDict"
version = "0.1.0"
description = "RemoteDict is a lightweight, in-memory key-value store server implemented in Python."
authors = [
    { name = "TechnoJo" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/technojo2000/RemoteDict"
"Repository" = "https://github.com/technojo2000/RemoteDict"
